@@ -33,7 +33,7 @@ from phobos.core.ffi import (LIBPHOBOS, ResourceFamily)
 
 ORDERED_SCHEMAS = [
     "1.1", "1.2", "1.91", "1.92", "1.93", "1.95",
-    "2.0", "2.1", "2.2", "3.0"
+    "2.0", "2.1", "2.2", "3.0", "3.2",
 ]
 
 FUTURE_SCHEMAS = []
@@ -72,6 +72,7 @@ class Migrator: # pylint: disable=too-many-public-methods
             "2.0": ("2.1", self.convert_2_0_to_2_1),
             "2.1": ("2.2", self.convert_2_1_to_2_2),
             "2.2": ("3.0", self.convert_2_2_to_3),
+            "3.0": ("3.2", self.convert_3_to_3_2),
         }
 
         self.reachable_versions = set(
@@ -725,6 +726,25 @@ class Migrator: # pylint: disable=too-many-public-methods
         """Convert DB from v2.2 to v3.0"""
         with self.connect():
             self.convert_schema_2_2_to_3()
+
+    def convert_schema_3_to_3_2(self):
+        """DB schema changes: append last_locate timestamp to lock"""
+        cur = self.conn.cursor()
+        cur.execute(f"""
+            -- update lock table
+            ALTER TABLE lock ADD last_locate timestamp DEFAULT NULL;
+            UPDATE lock SET last_locate = NULL;
+                    
+            -- update current schema version
+            UPDATE schema_info SET version = '3.2';
+        """)
+        self.conn.commit()
+        cur.close()
+
+    def convert_3_to_3_2(self):
+        """Convert DB from v3.0 to v3.2"""
+        with self.connect():
+            self.convert_schema_3_to_3_2()
 
     def migrate(self, target_version=None):
         """Convert DB schema up to a given phobos version"""
